# Crisis_Plan_Builder

./: .gitignore  README.md  pyproject.toml  requirements-v2.txt  requirements.txt
.cursor/rules/: crisis-management-planner.mdc
.github/workflows/: ci.yml
docs/anthropic/: crisis-management-planner-agent.yaml
knowledge/: version.json
knowledge/business_continuity/: README.md
knowledge/communications/: README.md
knowledge/crisis_management/: client_intake_copy.yaml  iso_22361_checklist.md  organization_context.yaml  readiness_weights.yaml  requirements_catalog.yaml
knowledge/executive_decision_making/: README.md
knowledge/incident_management/: README.md
knowledge/risk_assessment/: travel_overlay.yaml
knowledge/tabletop_exercises/: README.md
scripts/: build_ngo_fixtures.py  generate_client_intake_copy.py
src/cmp/: __init__.py
src/cmp/api/: app.py  (+3 more)
tests/: test_agents_pipeline.py  test_api.py  test_client_workflow.py  test_deliverables.py  test_discovery_gaps.py  test_document_extract.py  test_documents_api.py  test_docx_export.py  test_engagement_store.py  test_engagement_workflow.py  test_golden_discovery.py  test_industry_modifiers.py  test_intake_form.py  test_intake_form_api.py  test_knowledge_search.py  test_ngo_demo.py  test_organization_context.py  test_planner_workflow.py  test_playbook_builder.py  test_readiness_score.py
tests/fixtures/: example_manufacturing_intake.json  example_manufacturing_intake_enriched.json  example_mfg_merge_updates.json  example_ngo_intake.json  example_ngo_intake_enriched.json  example_ngo_merge_updates.json  (+1 more)
(+63 files in other folders)
