[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crisis-management-planner"
version = "2.2.0"
description = "Cursor-operated crisis management planning agent system for consultants"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "jinja2>=3.1",
]

[project.optional-dependencies]
llm = ["google-generativeai>=0.8"]
workflow = ["langgraph>=0.2", "langchain-core>=0.3"]
v2 = [
  "fastapi>=0.115",
  "uvicorn>=0.32",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
  "python-docx>=1.1",
  "pypdf>=4.0",
  "langgraph>=0.2",
  "langchain-core>=0.3",
]
test = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
cmp-discovery = "cmp.workflows.discovery_cli:main"
cmp-merge-intake = "cmp.workflows.merge_intake_cli:main"
cmp-planner = "cmp.workflows.planner_cli:main"
cmp-api = "cmp.api.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cmp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
